@@ -231,6 +231,17 @@ class TestSiteSetup(IntranettTestCase):
         exceptions = error_log.getProperties()['ignored_exceptions']
         self.assertTrue('LinkIntegrityNotificationException' in exceptions)
 
+    def test_tinymce(self):
+        from Products.PortalTransforms.interfaces import IPortalTransformsTool
+        portal = self.layer['portal']
+        tiny = getToolByName(portal, 'portal_tinymce')
+        self.assertTrue(tiny.link_using_uids, True)
+        transform_utility = queryUtility(IPortalTransformsTool)
+        policies = transform_utility.listPolicies()
+        policies = [(mimetype, required) for (mimetype, required) in policies
+            if mimetype == "text/x-html-safe"]
+        self.assertEqual(policies[0][1], ('html_to_tinymce_output_html', ))
+
 
 class TestAdmin(IntranettTestCase):
 
